# zam

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  aliases.csv  config.zam  deny.toml  flake.nix
.claude/: settings.local.json
.github/workflows/: auto-tag.yml  cargo-deny.yml  ci.yml  release.yml  version-bump.yml
sample/: aliases.csv
src/: TODO  alias.rs  backend.rs  cli.rs  config.rs  database.rs  db.rs  error.rs  history.rs  history_db.rs  lib.rs  main.rs  manage_tui.rs  prelude.rs  redaction.rs  search.rs  tui.rs  types.rs
src/cli/: args.rs  mod.rs
src/cli/handlers/: alias.rs  auth.rs  basic.rs  config.rs  database.rs  import_export.rs  manage.rs  mod.rs  shell_integration.rs  tui_handler.rs
