[package]
name = "mortimer"
version = "0.4.0"
edition = "2024"
authors = ["Fernando Meyer <fm@pobox.com>"]
description = "Enhanced shell history manager with sensitive data redaction"
license = "MIT"
repository = "https://github.com/fmeyer/mortimer"
keywords = ["shell", "history", "cli", "security"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
dirs = "6.0"
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.38", features = ["bundled", "chrono"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
home = "0.5"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.29"


[dev-dependencies]
tempfile = "3.27"

[[bin]]
name = "mortimer"
path = "src/main.rs"

[lib]
name = "mortimer"
path = "src/lib.rs"
