[package]
name = "zam"
version = "0.8.1"
edition = "2024"
authors = ["Fernando Meyer <fm@pobox.com>"]
description = "Enhanced shell history manager with sensitive data redaction"
license = "MIT"
repository = "https://github.com/fmeyer/zam"
keywords = ["shell", "history", "cli", "security"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
dirs = "6.0"
regex = "1.12"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
home = "0.5"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty"] }


[dev-dependencies]
tempfile = "3.27"

[[bin]]
name = "zam"
path = "src/main.rs"

[lib]
name = "zam"
path = "src/lib.rs"
